<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:layout_width="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">
    <EditText
        android:layout_width="match_parent"
        android:maxLines="1"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:id="@+id/name"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:inputType="textPersonName"/>
    <TextView
        android:text="@string/topping"
        android:textColor="#000000"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop = "8dp"
        style="@style/header"
        android:layout_marginBottom="16dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whippedCream"
        android:textSize="16sp"
        android:paddingLeft="16dp"
        android:textColor="#000000"
        android:id="@+id/whippedCream"
        android:onClick="cream"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:id="@+id/chocolate"
        android:onClick="chocolate"
        android:textSize="16sp"
        android:paddingLeft="16dp"/>

    <TextView
        android:text="Quantity"
        android:padding="8dp"
        android:textColor="#000000"
        android:id="@+id/quantity"
        style="@style/header" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/minus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:onClick="minus"
            android:text="-" />

        <TextView
            android:id="@+id/numberOfCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:text="1"
            android:layout_marginTop="8dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/plus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:onClick="plus"
            android:text="+" />
    </LinearLayout>
    <TextView
        android:text="@string/summary"
        android:padding="8dp"
        android:textColor="#000000"
        style="@style/header" />

    <TextView
        android:id="@+id/orderSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="16sp" />
</LinearLayout>
</ScrollView>